tests/testdata/run/unstable_temporal_api/missing_flag.out
error: Uncaught (in promise) ReferenceError: Temporal is not defined
Temporal.Now.instant();
^
    at [WILDCARD]missing_flag.js:1:1
